; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_glsl_shader.c_shader_glsl_allocate_context_data.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_glsl_shader.c_shader_glsl_allocate_context_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wined3d_context = type { %struct.glsl_context_data* }
%struct.glsl_context_data = type { i32 }

@FALSE = common dso_local global i32 0, align 4
@GL_FIXED_ONLY_ARB = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.wined3d_context*)* @shader_glsl_allocate_context_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @shader_glsl_allocate_context_data(%struct.wined3d_context* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.wined3d_context*, align 8
  %4 = alloca %struct.glsl_context_data*, align 8
  store %struct.wined3d_context* %0, %struct.wined3d_context** %3, align 8
  %5 = call %struct.glsl_context_data* @heap_alloc_zero(i32 4)
  store %struct.glsl_context_data* %5, %struct.glsl_context_data** %4, align 8
  %6 = icmp ne %struct.glsl_context_data* %5, null
  br i1 %6, label %9, label %7

7:                                                ; preds = %1
  %8 = load i32, i32* @FALSE, align 4
  store i32 %8, i32* %2, align 4
  br label %17

9:                                                ; preds = %1
  %10 = load i32, i32* @GL_FIXED_ONLY_ARB, align 4
  %11 = load %struct.glsl_context_data*, %struct.glsl_context_data** %4, align 8
  %12 = getelementptr inbounds %struct.glsl_context_data, %struct.glsl_context_data* %11, i32 0, i32 0
  store i32 %10, i32* %12, align 4
  %13 = load %struct.glsl_context_data*, %struct.glsl_context_data** %4, align 8
  %14 = load %struct.wined3d_context*, %struct.wined3d_context** %3, align 8
  %15 = getelementptr inbounds %struct.wined3d_context, %struct.wined3d_context* %14, i32 0, i32 0
  store %struct.glsl_context_data* %13, %struct.glsl_context_data** %15, align 8
  %16 = load i32, i32* @TRUE, align 4
  store i32 %16, i32* %2, align 4
  br label %17

17:                                               ; preds = %9, %7
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}

declare dso_local %struct.glsl_context_data* @heap_alloc_zero(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
